# ising-model

./: .CMakePresets.json.un~  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.py  pyproject.toml  vcpkg.json
include/ising/: lattice.hpp  simulator.hpp
scripts/: grid_helper.py  process_data.py  visualize.py
sim_wrapper/: grid_helper.py  scripts.py
src/: main.cpp  simulator.cpp
